z-index issue fixed product detail page

--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -1398,7 +1398,7 @@ input[type="submit"]:hover {
     padding-left: 0px !important;
     padding-right: 0px !important;
     overflow-y: scroll;
-    z-index: 99999;
+    z-index: 999999;
 }
 .modal-backdrop{z-index: 9999;}
 .breadcrumb1 ul {
